--- a/hooks.yaml
+++ b/hooks.yaml
@@ -2,11 +2,17 @@
     name: fmt
     description: Format files with go fmt.
     entry: fmt.sh
-    language: system
+    language: script
     files: \.go$
 -   id: vet
     name: vet
     description: Check files with go vet.
     entry: vet.sh
     language: script
+    files: \.go$
+-   id: fix
+    name: fix
+    description: Fix files with go fix.
+    entry: go fix
+    language: system
     files: \.go$
